# farcoin

./: Cargo.toml  LICENSE  README.md  launch.bat
crates/web/: Cargo.toml
crates/web/src/: balance.rs  index.rs  main.rs  transaction.rs  validate.rs  wallet.rs  world.rs
frontend/: balance.html  index.html  transaction.html  validate.html  wallet.html
frontend/assets/css/: main.css
frontend/assets/scripts/: util.js
src/: hash.rs  key.rs  lib.rs  time.rs  util.rs
