[package]
name = "farcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10.6"
hex = "0.4.3"
hifitime = { version = "3.6.0", features = ["serde"] }
k256 = "0.11.6"
rand_core = "0.6.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[workspace]
members = ["crates/*"]
