[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
axum-extra = { version = "0.3.7", features = ["spa"] }
farcoin = { path = "../../" }
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
